compiler/src/tests/snapshots/sengoo_compiler__tests__snapshot_tests__snapshot_02_arithmetic.snap
---
source: compiler/src/tests/snapshot_tests.rs
expression: output
---
; Sengoo LLVM IR
; Generated by Sengoo Compiler

target triple = "<host>"

; External C library functions
declare i32 @puts(i8*)
declare i32 @printf(i8*, ...)

; Sengoo runtime print functions
declare void @sengoo_print_i64(i64)
declare void @sengoo_print_bool(i64)
declare void @sengoo_print_f64(double)
declare void @sengoo_print_str(i8*)

; Sengoo runtime string functions
declare i64 @sengoo_str_len(i8*)
declare i8* @sengoo_str_concat(i8*, i8*)
declare i64 @sengoo_str_eq(i8*, i8*)

; Sengoo async runtime functions
declare i64 @sengoo_async_frame_alloc(i64)
declare void @sengoo_async_frame_free(i64)
declare void @sengoo_async_frame_store(i64, i64, i64)
declare i64 @sengoo_async_frame_load(i64, i64)
declare i64 @sengoo_async_run_main_i64()


; Function: main
define i64 @main() {
bb_0:
    %u_2 = alloca i64
    %u_4 = alloca i64
    %t_1 = add i64 0, 10
    store i64 %t_1, i64* %u_2
    %t_3 = add i64 0, 20
    store i64 %t_3, i64* %u_4
    %load.0 = load i64, i64* %u_2
    %load.1 = load i64, i64* %u_4
    %t_5 = add i64 %load.0, %load.1
    ret i64 %t_5
}
