compiler/src/tests/snapshots/sengoo_compiler__tests__snapshot_tests__snapshot_04_array.snap
---
source: compiler/src/tests/snapshot_tests.rs
expression: output
---
; Sengoo LLVM IR
; Generated by Sengoo Compiler

target triple = "<host>"

; External C library functions
declare i32 @puts(i8*)
declare i32 @printf(i8*, ...)

; Sengoo runtime print functions
declare void @sengoo_print_i64(i64)
declare void @sengoo_print_bool(i64)
declare void @sengoo_print_f64(double)
declare void @sengoo_print_str(i8*)

; Sengoo runtime string functions
declare i64 @sengoo_str_len(i8*)
declare i8* @sengoo_str_concat(i8*, i8*)
declare i64 @sengoo_str_eq(i8*, i8*)
declare i64 @sengoo_str_compare(i8*, i8*)

; Sengoo async runtime functions
declare i64 @sengoo_async_frame_alloc(i64)
declare void @sengoo_async_frame_free(i64)
declare void @sengoo_async_frame_store(i64, i64, i64)
declare i64 @sengoo_async_frame_load(i64, i64)
declare i64 @sengoo_async_run_main_i64()


; Function: main
define i64 @main() {
bb_0:
    %u_4 = alloca [3 x i64]
    %t_1 = add i64 0, 10
    %t_2 = add i64 0, 20
    %t_3 = add i64 0, 30
    %u_4.elem.0 = getelementptr i64, i64* %u_4, i64 0
    store i64 %t_1, i64* %u_4.elem.0
    %u_4.elem.1 = getelementptr i64, i64* %u_4, i64 1
    store i64 %t_2, i64* %u_4.elem.1
    %u_4.elem.2 = getelementptr i64, i64* %u_4, i64 2
    store i64 %t_3, i64* %u_4.elem.2
    %t_5 = add i64 0, 1
    %t_6 = getelementptr i64, i64* %u_4, i64 %t_5
    %t_7 = load i64, i64* %t_6
    ret i64 %t_7
}
