compiler/src/tests/snapshots/sengoo_compiler__tests__snapshot_tests__snapshot_05_loop.snap
---
source: compiler/src/tests/snapshot_tests.rs
expression: output
---
; Sengoo LLVM IR
; Generated by Sengoo Compiler

target triple = "<host>"

; External C library functions
declare i32 @puts(i8*)
declare i32 @printf(i8*, ...)

; Sengoo runtime print functions
declare void @sengoo_print_i64(i64)
declare void @sengoo_print_bool(i64)
declare void @sengoo_print_f64(double)
declare void @sengoo_print_str(i8*)

; Sengoo runtime string functions
declare i64 @sengoo_str_len(i8*)
declare i8* @sengoo_str_concat(i8*, i8*)
declare i64 @sengoo_str_eq(i8*, i8*)
declare i64 @sengoo_str_compare(i8*, i8*)

; Sengoo async runtime functions
declare i64 @sengoo_async_frame_alloc(i64)
declare void @sengoo_async_frame_free(i64)
declare void @sengoo_async_frame_store(i64, i64, i64)
declare i64 @sengoo_async_frame_load(i64, i64)
declare i64 @sengoo_async_run_main_i64()


; Function: main
define i64 @main() {
bb_0:
    %u_6 = alloca [5 x i64]
    %u_8 = alloca i64
    %u_9 = alloca i64
    %u_11 = alloca i64
    %t_1 = add i64 0, 1
    %t_2 = add i64 0, 2
    %t_3 = add i64 0, 3
    %t_4 = add i64 0, 4
    %t_5 = add i64 0, 5
    %u_6.elem.0 = getelementptr i64, i64* %u_6, i64 0
    store i64 %t_1, i64* %u_6.elem.0
    %u_6.elem.1 = getelementptr i64, i64* %u_6, i64 1
    store i64 %t_2, i64* %u_6.elem.1
    %u_6.elem.2 = getelementptr i64, i64* %u_6, i64 2
    store i64 %t_3, i64* %u_6.elem.2
    %u_6.elem.3 = getelementptr i64, i64* %u_6, i64 3
    store i64 %t_4, i64* %u_6.elem.3
    %u_6.elem.4 = getelementptr i64, i64* %u_6, i64 4
    store i64 %t_5, i64* %u_6.elem.4
    %t_7 = add i64 0, 0
    store i64 %t_7, i64* %u_8
    %t_10 = add i64 0, 0
    store i64 %t_10, i64* %u_9
    %t_12 = add i64 0, 5
    br label %bb_1
bb_1:
    %t_13 = load i64, i64* %u_9
    %t_14 = add i64 0, %t_12
    %t_15 = icmp slt i64 %t_13, %t_14
    br i1 %t_15, label %bb_2, label %bb_4
bb_2:
    %t_16 = load i64, i64* %u_9
    %t_17 = getelementptr i64, i64* %u_6, i64 %t_16
    %t_18 = load i64, i64* %t_17
    store i64 %t_18, i64* %u_11
    %load.0 = load i64, i64* %u_8
    %load.1 = load i64, i64* %u_11
    %t_19 = add i64 %load.0, %load.1
    store i64 %t_19, i64* %u_8
    br label %bb_3
bb_3:
    %t_21 = load i64, i64* %u_9
    %t_22 = add i64 0, 1
    %t_23 = add i64 %t_21, %t_22
    store i64 %t_23, i64* %u_9
    br label %bb_1
bb_4:
    %load.2 = load i64, i64* %u_8
    ret i64 %load.2
}
