compiler/src/tests/snapshots/sengoo_compiler__tests__snapshot_tests__snapshot_06_lambda.snap
---
source: compiler/src/tests/snapshot_tests.rs
expression: output
---
; Sengoo LLVM IR
; Generated by Sengoo Compiler

target triple = "<host>"

; External C library functions
declare i32 @puts(i8*)
declare i32 @printf(i8*, ...)

; Sengoo runtime print functions
declare void @sengoo_print_i64(i64)
declare void @sengoo_print_bool(i64)
declare void @sengoo_print_f64(double)
declare void @sengoo_print_str(i8*)

; Sengoo runtime string functions
declare i64 @sengoo_str_len(i8*)
declare i8* @sengoo_str_concat(i8*, i8*)
declare i64 @sengoo_str_eq(i8*, i8*)

; Sengoo async runtime functions
declare i64 @sengoo_async_frame_alloc(i64)
declare void @sengoo_async_frame_free(i64)
declare void @sengoo_async_frame_store(i64, i64, i64)
declare i64 @sengoo_async_frame_load(i64, i64)
declare i64 @sengoo_async_run_main_i64()


; Function: main
define i64 @main() {
bb_0:
    %u_2 = alloca i64
    %u_4 = alloca i64 (i64)*
    %u_5 = alloca [1 x i64]
    %t_1 = add i64 0, 10
    store i64 %t_1, i64* %u_2
    %t_7 = add i64 0, 0
    %t_6 = getelementptr i64, i64* %u_5, i64 %t_7
    %t_8 = load i64, i64* %u_2
    store i64 %t_8, i64* %t_6
    %t_9 = select i1 true, i64* %u_5, i64* null
    %t_10 = add i64 0, 5
    %t_11 = call i64 @$__lambda0(i64* %t_9, i64 %t_10)
    ret i64 %t_11
}

; Function: $__lambda0
define i64 @$__lambda0(i64* %l_1, i64 %l_2) {
bb_0:
    %t_4 = add i64 0, 0
    %t_5 = getelementptr i64, i64* %l_1, i64 %t_4
    %t_3 = load i64, i64* %t_5
    %t_6 = add i64 %t_3, %l_2
    ret i64 %t_6
}
