compiler/src/tests/snapshots/sengoo_compiler__tests__snapshot_tests__snapshot_07_if.snap
---
source: compiler/src/tests/snapshot_tests.rs
assertion_line: 66
expression: output
---
; Sengoo LLVM IR
; Generated by Sengoo Compiler

target triple = "x86_64-pc-windows-msvc"

; External C library functions
declare i32 @puts(i8*)
declare i32 @printf(i8*, ...)

; Sengoo runtime print functions
declare void @sengoo_print_i64(i64)
declare void @sengoo_print_bool(i64)
declare void @sengoo_print_f64(double)
declare void @sengoo_print_str(i8*)

; Sengoo runtime string functions
declare i64 @sengoo_str_len(i8*)
declare i8* @sengoo_str_concat(i8*, i8*)
declare i64 @sengoo_str_eq(i8*, i8*)


; Function: main
define i64 @main() {
bb_0:
    %u_2 = alloca i64
    %t_1 = add i64 0, 5
    store i64 %t_1, i64* %u_2
    %t_3 = add i64 0, 3
    %load.0 = load i64, i64* %u_2
    %t_4 = icmp sgt i64 %load.0, %t_3
    br i1 %t_4, label %bb_1, label %bb_2
bb_1:
    %t_5 = add i64 0, 100
    br label %bb_3
bb_2:
    %t_6 = add i64 0, 200
    br label %bb_3
bb_3:
    %t_7 = phi i64 [ %t_5, %bb_1 ], [ %t_6, %bb_2 ]
    ret i64 %t_7
}
