compiler/src/tests/snapshots/sengoo_compiler__tests__snapshot_tests__snapshot_08_struct.snap
---
source: compiler/src/tests/snapshot_tests.rs
expression: output
---
; Sengoo LLVM IR
; Generated by Sengoo Compiler

target triple = "x86_64-pc-windows-msvc"

; External C library functions
declare i32 @puts(i8*)
declare i32 @printf(i8*, ...)

; Sengoo runtime print functions
declare void @sengoo_print_i64(i64)
declare void @sengoo_print_bool(i64)
declare void @sengoo_print_f64(double)
declare void @sengoo_print_str(i8*)

; Sengoo runtime string functions
declare i64 @sengoo_str_len(i8*)
declare i8* @sengoo_str_concat(i8*, i8*)
declare i64 @sengoo_str_eq(i8*, i8*)

; Sengoo async runtime functions
declare i64 @sengoo_async_frame_alloc(i64)
declare void @sengoo_async_frame_free(i64)
declare void @sengoo_async_frame_store(i64, i64, i64)
declare i64 @sengoo_async_frame_load(i64, i64)
declare i64 @sengoo_async_run_main_i64(i64)

%Point = type { i64, i64 }

; Function: main
define i64 @main() {
bb_0:
    %u_4 = alloca %Point
    %t_1 = add i64 0, 10
    %t_2 = add i64 0, 20
    %t_3.f0 = insertvalue %Point undef, i64 %t_1, 0
    %t_3 = insertvalue %Point %t_3.f0, i64 %t_2, 1
    store %Point %t_3, %Point* %u_4
    %load.0 = load %Point, %Point* %u_4
    %t_5 = extractvalue %Point %load.0, 0
    %load.1 = load %Point, %Point* %u_4
    %t_6 = extractvalue %Point %load.1, 1
    %t_7 = add i64 %t_5, %t_6
    ret i64 %t_7
}
