compiler/src/tests/snapshots/sengoo_compiler__tests__snapshot_tests__snapshot_09_method_call.snap
---
source: compiler/src/tests/snapshot_tests.rs
expression: output
---
; Sengoo LLVM IR
; Generated by Sengoo Compiler

target triple = "<host>"

; External C library functions
declare i32 @puts(i8*)
declare i32 @printf(i8*, ...)

; Sengoo runtime print functions
declare void @sengoo_print_i64(i64)
declare void @sengoo_print_bool(i64)
declare void @sengoo_print_f64(double)
declare void @sengoo_print_str(i8*)

; Sengoo runtime string functions
declare i64 @sengoo_str_len(i8*)
declare i8* @sengoo_str_concat(i8*, i8*)
declare i64 @sengoo_str_eq(i8*, i8*)

; Sengoo async runtime functions
declare i64 @sengoo_async_frame_alloc(i64)
declare void @sengoo_async_frame_free(i64)
declare void @sengoo_async_frame_store(i64, i64, i64)
declare i64 @sengoo_async_frame_load(i64, i64)
declare i64 @sengoo_async_run_main_i64()


; Function: i64_abs
define i64 @i64_abs(i64 %l_1) {
bb_0:
    %t_2 = add i64 0, 0
    %t_3 = icmp slt i64 %l_1, %t_2
    br i1 %t_3, label %bb_1, label %bb_2
bb_1:
    %t_4 = sub i64 0, %l_1
    br label %bb_3
bb_2:
    br label %bb_3
bb_3:
    %t_5 = phi i64 [ %t_4, %bb_1 ], [ %l_1, %bb_2 ]
    ret i64 %t_5
}

; Function: i64_add
define i64 @i64_add(i64 %l_1, i64 %l_2) {
bb_0:
    %t_3 = add i64 %l_1, %l_2
    ret i64 %t_3
}

; Function: bool_to_int
define i64 @bool_to_int(i1 %l_1) {
bb_0:
    br i1 %l_1, label %bb_1, label %bb_2
bb_1:
    %t_2 = add i64 0, 1
    br label %bb_3
bb_2:
    %t_3 = add i64 0, 0
    br label %bb_3
bb_3:
    %t_4 = phi i64 [ %t_2, %bb_1 ], [ %t_3, %bb_2 ]
    ret i64 %t_4
}

; Function: main
define i64 @main() {
bb_0:
    %u_3 = alloca i64
    %u_5 = alloca i64
    %u_8 = alloca i64
    %u_10 = alloca i1
    %u_12 = alloca i64
    %t_1 = add i64 0, 21
    %t_2 = sub i64 0, %t_1
    store i64 %t_2, i64* %u_3
    %load.0 = load i64, i64* %u_3
    %t_4 = call i64 @i64_abs(i64 %load.0)
    store i64 %t_4, i64* %u_5
    %t_6 = add i64 0, 21
    %load.1 = load i64, i64* %u_5
    %t_7 = call i64 @i64_add(i64 %load.1, i64 %t_6)
    store i64 %t_7, i64* %u_8
    %t_9 = add i1 0, 1
    store i1 %t_9, i1* %u_10
    %load.2 = load i1, i1* %u_10
    %t_11 = call i64 @bool_to_int(i1 %load.2)
    store i64 %t_11, i64* %u_12
    %load.3 = load i64, i64* %u_8
    %load.4 = load i64, i64* %u_12
    %t_13 = add i64 %load.3, %load.4
    ret i64 %t_13
}
